--- a/index.html
+++ b/index.html
@@ -306,7 +306,25 @@ document.getElementById('runCalc').addEventListener('click', function () {
   });
 });
 </script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  // Prefill example values so the chart can run
+  const set = (id, v) => { const el = document.getElementById(id); if (el) el.value = v; };
 
+  set("dob", "1985-01-01");
+  set("retireDate", "2050-01-01");
+  set("retiresavings", "10000");
+  set("futureretiresavings", "6000");
+  set("socsecAge", "2052-01-01");
+  set("socsecAmt", "20000");
+  set("pensiondate", "");
+  set("pensions", "");
+
+  // Auto-run the calculation once so the chart appears
+  const btn = document.getElementById("runCalc");
+  if (btn) btn.click();
+});
+</script>
 <!-- Auto-recalc for toggles (place LAST, before </body>) -->
 <script>
 (function () {
