--- a/beta.html
+++ b/beta.html
@@ -66,7 +66,13 @@
     }
     .toggle-row { display: flex; justify-content: space-between; align-items: center; gap: 40px; flex-wrap: nowrap; }
     .toggle-item { display: flex; align-items: center; gap: 10px; white-space: nowrap; }
-
+/* Proper tooltip anchor for the toggle labels */
+.toggle-label {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+}
     .switch { position: relative; display: inline-block; width: 46px; height: 24px; }
     .switch input { display: none; }
     .slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #cbd5e1; transition: 0.2s; border-radius: 24px; }
@@ -167,11 +173,15 @@ function setupTooltip(btnId, boxId) {
   const box = document.getElementById(boxId);
   if (!btn || !box) return;
 
+  // Prevent label-click from hijacking the tooltip click
+  btn.addEventListener('mousedown', e => e.preventDefault());
+
   btn.addEventListener('click', (e) => {
     e.stopPropagation();
     box.style.display = (box.style.display === "block") ? "none" : "block";
   });
 
+  // Close tooltip when clicking outside
   document.addEventListener("click", () => { box.style.display = "none"; });
 }
 
