--- a/beta.html
+++ b/beta.html
@@ -131,7 +131,7 @@
     <div id="postCalcOptions" class="cb-card">
       <div class="toggle-row">
         <div class="toggle-item">
-          <label class="toggle-label">
+          <label class="toggle-label tooltip-click-container">
             Would you like to account for inflation?
             <span class="click-icon" id="inflationQM">?</span>
             <div class="tooltip-click-box" id="inflationBox">
