--- a/beta.html
+++ b/beta.html
@@ -1,259 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Retirement Calculator</title>
-
-  <!-- Coinbase-like font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f7f9fc;
-      margin: 0;
-      padding-top: 70px; /* Prevent sticky header overlap */
-      color: #0a0f2c;
-    }
-
-    .cb-wrap { max-width: 1200px; margin: 0 auto; padding: 0 28px; }
-    .cb-header { margin-bottom: 20px; text-align: left; }
-    .cb-title { font-size: 40px; font-weight: 700; margin: 0; }
-    .cb-sub { font-size: 17px; color: #4a5568; margin-top: 6px; }
-
-    .cb-stack { display: flex; flex-direction: column; gap: 12px; }
-    .cb-card { background: white; padding: 24px; border-radius: 18px;
-               box-shadow: 0 10px 30px rgba(2,6,23,0.07); border: 1px solid #e5e9f2; }
-
-    .cb-row { display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 20px; }
-    @media (min-width: 1100px) { .cb-row { grid-template-columns: repeat(3, minmax(0, 1fr)); } }
-
-    .cb-field { display: flex; flex-direction: column; gap: 6px; }
-    label { font-size: 14px; font-weight: 500; color: #2d3748; }
-
-    input[type="date"], input[type="number"] {
-      font-size: 18px; padding: 14px 14px; border-radius: 14px;
-      border: 1px solid #e5e9f2; background: #fdfdfd;
-    }
-    input:focus { border-color: #b8cdfd; outline: none;
-                  box-shadow: 0 0 0 4px rgba(0,82,255,0.12); }
-
-    #runCalc { background: #1a73e8; color: white; border: none; font-size: 16px;
-               padding: 14px 20px; border-radius: 14px; font-weight: 600;
-               cursor: pointer; transition: 0.15s; }
-    #runCalc:hover { background: #0f5ad2; }
-
-    /* Sticky Header */
-    .site-header {
-      position: fixed; top: 0; left: 0; right: 0; z-index: 1000;
-      background: rgba(255,255,255,0.85); backdrop-filter: blur(8px);
-      border-bottom: 1px solid #e5e9f2;
-    }
-
-    .header-inner { display: flex; align-items: center; justify-content: space-between; min-height: 60px; }
-    .brand { font-weight: 700; color: #0a0f2c; text-decoration: none; font-size: 20px; }
-
-    .nav-links { display: flex; gap: 20px; }
-    .nav-links a { text-decoration: none; color: #1a1f33; font-weight: 500; }
-    .nav-links a:hover { text-decoration: underline; }
-
-    .nav-toggle { display: none; background: transparent; border: 0; font-size: 22px; cursor: pointer; }
-
-    @media (max-width: 820px) {
-      .nav-toggle { display: inline-block; }
-      .nav-links {
-        display: none; position: absolute; right: 28px; top: 60px;
-        background: #fff; padding: 12px; border: 1px solid #e5e9f2;
-        border-radius: 12px; box-shadow: 0 8px 24px rgba(2,6,23,0.12);
-      }
-      .nav-links a { display: block; padding: 8px 10px; }
-      .nav-links.open { display: block; }
-    }
-
-    /* Tooltip styling */
-    .tooltip-click-container { position: relative; display: inline-flex; align-items: center; gap: 8px; }
-    .click-icon { width: 18px; height: 18px; font-size: 12px; border-radius: 50%;
-                  background: #1a73e8; color: white; display: inline-flex;
-                  align-items: center; justify-content: center; cursor: pointer; }
-
-    .tooltip-click-box {
-      display: none; position: absolute; top: 26px; left: 0; z-index: 9999;
-      background: white; border: 1px solid #e5e9f2; border-radius: 12px;
-      padding: 14px 16px; font-size: 13px; color: #1a1f33;
-      box-shadow: 0 8px 24px rgba(2,6,23,0.15);
-      max-width: 320px; white-space: normal; overflow-wrap: anywhere;
-    }
-
-    /* Toggles */
-    #postCalcOptions {
-      display: none;
-      border: 1px solid #d7dce5 !important;
-      background: #f1f4f9 !important;
-      padding: 16px !important;
-      border-radius: 12px !important;
-    }
-
-    .toggle-row { display: flex; justify-content: space-between; align-items: center; gap: 40px; }
-    .toggle-item { display: flex; align-items: center; gap: 10px; }
-
-    .switch { position: relative; width: 46px; height: 24px; }
-    .switch input { display: none; }
-    .slider { position: absolute; top: 0; left: 0; right: 0; bottom: 0;
-              background-color: #cbd5e1; border-radius: 24px; cursor: pointer; transition: 0.2s; }
-    .slider:before { content: ""; position: absolute; height: 18px; width: 18px;
-                     left: 3px; bottom: 3px; background: white; border-radius: 50%; transition: 0.2s; }
-    input:checked + .slider { background-color: #1a73e8; }
-    input:checked + .slider:before { transform: translateX(22px); }
-  </style>
-
-  <script src="https://code.highcharts.com/highcharts.js"></script>
-</head>
-<body>
-
-<!-- ✅ HEADER -->
-<header class="site-header">
-  <div class="cb-wrap header-inner">
-    <a class="brand" href="beta.html">FinTech Tools</a>
-
-    <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">☰</button>
-
-    <nav id="primary-nav" class="nav-links">
-      <a href="#retirement">Retirement Planner</a>
-      <a href="budget.html">Budget Planner</a>
-    </nav>
-  </div>
-</header>
-
-<!-- ✅ MAIN BODY -->
-<div class="cb-wrap">
-
-  <div class="cb-header" id="retirement">
-    <h1 class="cb-title">Retirement Calculator</h1>
-    <div class="cb-sub">Use the best retirement calculator on the web to understand your financial future.</div>
-  </div>
-
-  <div class="cb-stack">
-
-    <!-- INPUT CARD -->
-    <div class="cb-card">
-      <div class="cb-row">
-
-        <div class="cb-field"><label>Date of Birth</label><input id="dob" type="date" /></div>
-        <div class="cb-field"><label>Retirement Date</label><input id="retireDate" type="date" /></div>
-        <div class="cb-field"><label>Current Savings ($)</label><input id="retiresavings" type="number" /></div>
-
-        <div class="cb-field"><label>Annual Contributions ($)</label><input id="futureretiresavings" type="number" /></div>
-        <div class="cb-field"><label>Social Security Start</label><input id="socsecAge" type="date" /></div>
-
-        <div class="cb-field">
-          <label class="tooltip-click-container">
-            Estimated Annual Social Security ($)
-            <span class="click-icon" id="ssInfoBtn">?</span>
-            <div class="tooltip-click-box" id="ssInfoBox">
-              Unsure? Visit SSA.gov:
-              <br><a href="https://www.ssa.gov/myaccount" target="_blank">MyAccount</a>
-            </div>
-          </label>
-          <input id="socsecAmt" type="number" />
-        </div>
-
-        <div class="cb-field"><label>Pension Start</label><input id="pensiondate" type="date" /></div>
-        <div class="cb-field"><label>Pension Amount ($)</label><input id="pensions" type="number" /></div>
-
-      </div>
-
-      <div class="cb-actions">
-        <button id="runCalc">Run Calculation</button>
-      </div>
-    </div>
-
-    <!-- TOGGLES -->
-    <div id="postCalcOptions" class="cb-card">
-      <div class="toggle-row">
-
-        <div class="toggle-item">
-          <label class="tooltip-click-container">
-            Account for inflation?
-            <span class="click-icon" id="inflationQM">?</span>
-            <div class="tooltip-click-box" id="inflationBox">
-              Inflation adjustment uses 3% annually.
-            </div>
-          </label>
-
-          <label class="switch">
-            <input type="checkbox" id="inflationToggle"><span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="toggle-item">
-          <label class="tooltip-click-container">
-            Model withdrawals?
-            <span class="click-icon" id="withdrawQM">?</span>
-            <div class="tooltip-click-box" id="withdrawBox">
-              Uses a standard 4% retirement withdrawal rate.
-            </div>
-          </label>
-
-          <label class="switch">
-            <input type="checkbox" id="withdrawToggle"><span class="slider"></span>
-          </label>
-        </div>
-
-      </div>
-    </div>
-
-    <!-- CHART -->
-    <div class="cb-card">
-
-      <h2 id="chartTitle" style="margin:0; font-size:22px; font-weight:700;">Projected Retirement Savings</h2>
-      <div id="chartSubtitle" style="margin-bottom:14px; font-size:14px; color:#4a5568;"></div>
-
-      <div id="chart" style="height:360px;"></div>
-
-    </div>
-
-  </div>
-</div>
-
-<!-- ✅ TOOLTIP SCRIPT -->
-<script>
-function setupTooltip(btnId, boxId) {
-  const btn = document.getElementById(btnId);
-  const box = document.getElementById(boxId);
-  if (!btn || !box) return;
-  btn.addEventListener('click', (e) => {
-    e.stopPropagation();
-    box.style.display = (box.style.display === "block" ? "none" : "block");
-  });
-  document.addEventListener('click', () => { box.style.display = "none"; });
-}
-
-document.addEventListener("DOMContentLoaded", () => {
-  setupTooltip("ssInfoBtn", "ssInfoBox");
-  setupTooltip("inflationQM", "inflationBox");
-  setupTooltip("withdrawQM", "withdrawBox");
-});
-</script>
-
-<!-- ✅ MOBILE NAV -->
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const btn = document.querySelector('.nav-toggle');
-  const nav = document.getElementById('primary-nav');
-  if (!btn || !nav) return;
-  btn.addEventListener('click', () => {
-    const opened = nav.classList.toggle('open');
-    btn.setAttribute('aria-expanded', opened ? "true" : "false");
-  });
-});
-</script>
-
 <!-- ✅ CALCULATOR -->
-<script>
 <script>
 let hcChart = null;
 
@@ -281,7 +26,7 @@ document.getElementById('runCalc').addEventListener('click', function () {
 
   const today = new Date();
 
-  // exact fractional years from **today → Jan 1 of target year** (matches model timeline)
+  // exact fractional years from today → same month/day in target year
   function yearsFromToday(targetYear) {
     const now = new Date();
     const then = new Date(targetYear, now.getMonth(), now.getDate());
@@ -310,8 +55,8 @@ document.getElementById('runCalc').addEventListener('click', function () {
   const ssStart  = ssStr  ? parse(ssStr)  : null;
   const penStart = penStr ? parse(penStr) : null;
 
-  const currentSavings   = Number(document.getElementById('retiresavings').value || 0);
-  const annualContribution = Number(document.getElementById('futureretiresavings').value || 0);
+  const currentSavings      = Number(document.getElementById('retiresavings').value || 0);
+  const annualContribution  = Number(document.getElementById('futureretiresavings').value || 0);
 
   // Timeline starts next year (prevents “free” current-year growth)
   const currentYear = today.getFullYear() + 1;
@@ -401,3 +146,6 @@ document.getElementById('runCalc').addEventListener('click', function () {
     .forEach(el => el.addEventListener('click', rerunFromToggle));
 })();
 </script>
+
+</body>
+</html>
