--- a/beta.html
+++ b/beta.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Retirement Calculator</title>
 
   <!-- Coinbase-like font -->
@@ -16,7 +15,7 @@
       font-family: 'Inter', sans-serif;
       background: #f7f9fc;
       margin: 0;
-      padding-top: 70px;
+      padding-top: 70px; /* space for sticky header */
       color: #0a0f2c;
     }
 
@@ -31,8 +30,8 @@
       box-shadow: 0 10px 30px rgba(2,6,23,0.07); border: 1px solid #e5e9f2;
     }
 
-    .cb-row { display: grid; grid-template-columns: repeat(2,1fr); gap: 20px; }
-    @media(min-width:1100px){ .cb-row { grid-template-columns: repeat(3,1fr); } }
+    .cb-row { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; }
+    @media (min-width:1100px){ .cb-row { grid-template-columns: repeat(3, 1fr); } }
 
     .cb-field { display: flex; flex-direction: column; gap: 6px; }
     label { font-size: 14px; font-weight: 500; }
@@ -41,7 +40,6 @@
       font-size: 18px; padding: 14px; border-radius: 14px;
       border: 1px solid #e5e9f2; background: #fdfdfd;
     }
-
     input:focus {
       border-color: #b8cdfd;
       outline: none;
@@ -54,34 +52,23 @@
       border-radius: 14px; font-weight: 600;
       cursor: pointer; transition: 0.15s;
     }
-
-    #runCalc:hover { background:#0f5ad2; }
+    #runCalc:hover { background: #0f5ad2; }
 
     /* Sticky Header */
     .site-header {
-      position: fixed; top: 0; left: 0; right: 0;
-      z-index: 1000;
+      position: fixed; top: 0; left: 0; right: 0; z-index: 1000;
       background: rgba(255,255,255,0.85);
       backdrop-filter: blur(8px);
       border-bottom: 1px solid #e5e9f2;
     }
-
-    .header-inner {
-      display: flex; justify-content: space-between;
-      align-items: center; min-height: 60px;
-    }
-
+    .header-inner { display: flex; justify-content: space-between; align-items: center; min-height: 60px; }
     .brand { font-weight: 700; font-size: 20px; text-decoration: none; color:#0a0f2c; }
     .nav-links { display: flex; gap: 20px; }
     .nav-links a { color:#1a1f33; font-weight: 500; text-decoration:none; }
     .nav-links a:hover { text-decoration: underline; }
+    .nav-toggle { display:none; font-size:26px; background:none; border:0; cursor:pointer; }
 
-    .nav-toggle {
-      display:none; font-size:26px; background:none;
-      border:0; cursor:pointer;
-    }
-
-    @media(max-width:820px){
+    @media (max-width:820px){
       .nav-toggle { display:block; }
       .nav-links {
         display:none; position:absolute; right:28px; top:60px;
@@ -107,21 +94,28 @@
       border-radius:12px; max-width:320px;
       border:1px solid #e5e9f2;
       box-shadow:0 8px 24px rgba(2,6,23,0.15);
-      font-size:13px;
-      z-index:9999;
+      font-size:13px; z-index:9999;
+      white-space: normal; overflow-wrap: anywhere;
     }
 
-    /* Toggles */
+    /* Toggles (wrapper should expand properly; allow wrapping) */
     #postCalcOptions {
       display:none; background:#f1f4f9 !important;
       border:1px solid #d7dce5 !important;
       padding:16px !important; border-radius:12px !important;
     }
+    .toggle-row {
+      display:flex; justify-content:space-between; gap:24px;
+      align-items:flex-start; flex-wrap:wrap; /* allow wrap so container grows */
+    }
+    .toggle-item {
+      display:flex; align-items:flex-start; gap:12px;
+      white-space: normal;               /* allow text to wrap in the item */
+      max-width: 100%;
+    }
+    .toggle-item .tooltip-click-container { align-items:flex-start; }
 
-    .toggle-row { display:flex; justify-content:space-between; gap:40px; }
-    .toggle-item { display:flex; align-items:center; gap:12px; white-space:nowrap; }
-
-    .switch { position:relative; width:46px; height:24px; }
+    .switch { position:relative; width:46px; height:24px; flex:0 0 auto; }
     .switch input { display:none; }
     .slider {
       position:absolute; top:0; left:0; right:0; bottom:0;
@@ -134,19 +128,20 @@
     }
     input:checked + .slider { background:#1a73e8; }
     input:checked + .slider:before { transform:translateX(22px); }
+
+    /* Chart title/subtitle center */
+    #chartTitle, #chartSubtitle { text-align: center; }
   </style>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
 <body>
 
-<!-- ✅ HEADER -->
+<!-- HEADER -->
 <header class="site-header">
   <div class="cb-wrap header-inner">
     <a class="brand" href="beta.html">FinTech Tools</a>
-
     <button class="nav-toggle" aria-expanded="false">☰</button>
-
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
       <a href="budget.html">Budget Planner</a>
@@ -154,7 +149,7 @@
   </div>
 </header>
 
-<!-- ✅ MAIN CONTENT -->
+<!-- MAIN -->
 <div class="cb-wrap">
 
   <div class="cb-header" id="retirement">
@@ -164,10 +159,9 @@
 
   <div class="cb-stack">
 
-    <!-- ✅ INPUT CARD -->
+    <!-- Inputs -->
     <div class="cb-card">
       <div class="cb-row">
-
         <div class="cb-field"><label>Date of Birth</label><input id="dob" type="date" /></div>
         <div class="cb-field"><label>Retirement Date</label><input id="retireDate" type="date" /></div>
         <div class="cb-field"><label>Current Savings ($)</label><input id="retiresavings" type="number" /></div>
@@ -180,8 +174,11 @@
             Estimated Annual Social Security ($)
             <span class="click-icon" id="ssInfoBtn">?</span>
             <div class="tooltip-click-box" id="ssInfoBox">
-              Check your official benefit estimate at:<br>
-              <a href="https://www.ssa.gov/myaccount" target="_blank">SSA MyAccount</a>
+              Unsure how much you'll get? Use these official tools:<br><br>
+              • View your personalized estimate:<br>
+              <a href="https://www.ssa.gov/myaccount" target="_blank">SSA MyAccount</a><br><br>
+              • Quick benefit estimate calculator:<br>
+              <a href="https://www.ssa.gov/OACT/quickcalc/" target="_blank">SSA Quick Calculator</a>
             </div>
           </label>
           <input id="socsecAmt" type="number" />
@@ -189,18 +186,14 @@
 
         <div class="cb-field"><label>Pension Start</label><input id="pensiondate" type="date" /></div>
         <div class="cb-field"><label>Pension Amount ($)</label><input id="pensions" type="number" /></div>
-
       </div>
 
-      <div class="cb-actions">
-        <button id="runCalc">Run Calculation</button>
-      </div>
+      <div class="cb-actions"><button id="runCalc">Run Calculation</button></div>
     </div>
 
-    <!-- ✅ TOGGLE CARD -->
+    <!-- Toggles -->
     <div id="postCalcOptions" class="cb-card">
       <div class="toggle-row">
-
         <div class="toggle-item">
           <label class="tooltip-click-container">
             Account for inflation?
@@ -209,7 +202,6 @@
               Adjusts all future dollars back into today’s dollars using 3% inflation.
             </div>
           </label>
-
           <label class="switch">
             <input type="checkbox" id="inflationToggle"><span class="slider"></span>
           </label>
@@ -223,33 +215,26 @@
               Standard 4% annual distribution starting at retirement.
             </div>
           </label>
-
           <label class="switch">
             <input type="checkbox" id="withdrawToggle"><span class="slider"></span>
           </label>
         </div>
-
       </div>
     </div>
 
-    <!-- ✅ CHART CARD -->
+    <!-- Chart -->
     <div class="cb-card">
-
       <h2 id="chartTitle" style="margin:0; font-size:22px; font-weight:700;">
         Projected Retirement Savings
       </h2>
-
-      <div id="chartSubtitle"
-           style="margin-bottom:14px; font-size:14px; color:#4a5568;"></div>
-
+      <div id="chartSubtitle" style="margin-bottom:14px; font-size:14px; color:#4a5568;"></div>
       <div id="chart" style="height:360px;"></div>
-
     </div>
 
   </div>
 </div>
 
-<!-- ✅ TOOLTIP SCRIPT -->
+<!-- Tooltips -->
 <script>
 function setupTooltip(btnId, boxId) {
   const btn = document.getElementById(btnId);
@@ -271,11 +256,12 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-<!-- ✅ MOBILE NAV -->
+<!-- Mobile nav -->
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const btn = document.querySelector(".nav-toggle");
   const nav = document.getElementById("primary-nav");
+  if (!btn || !nav) return;
 
   btn.addEventListener("click", () => {
     const opened = nav.classList.toggle("open");
@@ -284,12 +270,11 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-<!-- ✅ CALCULATOR + HIGHCHARTS -->
+<!-- Calculator + Highcharts -->
 <script>
 let hcChart = null;
 
 document.getElementById("runCalc").addEventListener("click", function () {
-
   document.getElementById("postCalcOptions").style.display = "block";
 
   function updateChartSubtitle() {
@@ -304,10 +289,8 @@ document.getElementById("runCalc").addEventListener("click", function () {
       ? "Projections include a 4% distribution."
       : "Projections do not include distributions.";
 
-    document.getElementById("chartSubtitle").textContent =
-      infText + " " + wdText;
+    document.getElementById("chartSubtitle").textContent = infText + " " + wdText;
   }
-
   updateChartSubtitle();
 
   function parse(s) {
@@ -336,7 +319,7 @@ document.getElementById("runCalc").addEventListener("click", function () {
   const annualContribution = Number(document.getElementById("futureretiresavings").value || 0);
 
   const today = new Date();
-  const currentYear = today.getFullYear() + 1;
+  const currentYear = today.getFullYear() + 1;  // avoid “free” growth this year
   const endYear = dob.getFullYear() + 100;
 
   const timeline = [];
@@ -345,12 +328,10 @@ document.getElementById("runCalc").addEventListener("click", function () {
   const flowContrib = timeline.map(y => (y < retireYear ? annualContribution : 0));
   const flowSS = timeline.map(y => (ssStart && y >= ssStart.getFullYear() ? ssAmt : 0));
   const flowPension = timeline.map(y =>
-    penStart && y >= penStart.getFullYear() && y <= dob.getFullYear()+92 ? penAmt : 0
+    (penStart && y >= penStart.getFullYear() && y <= dob.getFullYear()+92) ? penAmt : 0
   );
 
-  const inflow = timeline.map((_,i) =>
-    flowContrib[i] + flowSS[i] + flowPension[i]
-  );
+  const inflow = timeline.map((_,i) => flowContrib[i] + flowSS[i] + flowPension[i]);
 
   const inflationActive = document.getElementById('inflationToggle').checked;
   const withdrawActive  = document.getElementById('withdrawToggle').checked;
@@ -366,9 +347,7 @@ document.getElementById("runCalc").addEventListener("click", function () {
 
   function deflate(path){
     if (!inflationActive) return path;
-    return path.map((v,i) =>
-      v / Math.pow(1 + INFL, yearsFromToday(timeline[i]))
-    );
+    return path.map((v,i) => v / Math.pow(1 + INFL, yearsFromToday(timeline[i])));
   }
 
   function simulate(rate){
@@ -376,8 +355,7 @@ document.getElementById("runCalc").addEventListener("click", function () {
     const out = [];
     for (let i=0; i<timeline.length; i++){
       bal = bal * (1 + rate) + inflow[i];
-      if (withdrawActive && timeline[i] >= retireYear)
-        bal -= bal * WD;
+      if (withdrawActive && timeline[i] >= retireYear) bal -= bal * WD;
       out.push(bal);
     }
     return deflate(out);
@@ -391,9 +369,7 @@ document.getElementById("runCalc").addEventListener("click", function () {
   function filter(path){
     const startYear = retireYear - 10;
     return timeline
-      .map((y,i) =>
-        y >= startYear ? [Date.UTC(y,0,1), path[i]] : null
-      )
+      .map((y,i) => y >= startYear ? [Date.UTC(y,0,1), path[i]] : null)
       .filter(Boolean);
   }
 
@@ -408,7 +384,19 @@ document.getElementById("runCalc").addEventListener("click", function () {
       labels:{ formatter(){ return "$" + Highcharts.numberFormat(this.value,0) } }
     },
     legend:{ enabled:true, align:"center", verticalAlign:"top" },
-    tooltip:{ shared:true, xDateFormat:"%Y" },
+    tooltip:{
+      shared:true,
+      formatter: function () {
+        // Year header
+        const x = (this.points && this.points[0]) ? this.points[0].x : this.x;
+        const year = Highcharts.dateFormat('%Y', x);
+        // Lines with whole-dollar formatting
+        const lines = (this.points || [this.point]).map(p =>
+          `<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y, 0)}</b>`
+        ).join('<br/>');
+        return `<b>${year}</b><br/>${lines}`;
+      }
+    },
     credits:{ enabled:false },
     series:[
       { name:"3%", data:filter(p3), type:"line", lineWidth:2 },
@@ -421,19 +409,16 @@ document.getElementById("runCalc").addEventListener("click", function () {
 });
 </script>
 
-<!-- ✅ AUTO UPDATE WHEN TOGGLES CHANGE -->
+<!-- Auto-update when toggles change -->
 <script>
 (function(){
   function rerun() {
     const btn = document.getElementById("runCalc");
     if (btn) btn.click();
   }
-
   document.addEventListener("change", e => {
-    if (["inflationToggle","withdrawToggle"].includes(e.target.id))
-      rerun();
+    if (["inflationToggle","withdrawToggle"].includes(e.target.id)) rerun();
   });
-
   document
     .querySelectorAll("#postCalcOptions .switch, #postCalcOptions .slider")
     .forEach(el => el.addEventListener("click", rerun));
