--- a/index.html
+++ b/index.html
@@ -1,1 +1,429 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Retirement Calculator</title>
 
+  <!-- Coinbase-like font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f7f9fc;
+      margin: 0;
+      padding-top: 70px; /* space for sticky header */
+      color: #0a0f2c;
+    }
+
+    .cb-wrap { max-width: 1200px; margin: 0 auto; padding: 0 28px; }
+    .cb-header { margin-bottom: 20px; }
+    .cb-title { font-size: 40px; font-weight: 700; margin: 0; }
+    .cb-sub { font-size: 17px; color: #4a5568; margin-top: 6px; }
+
+    .cb-stack { display: flex; flex-direction: column; gap: 16px; }
+    .cb-card {
+      background: white; padding: 24px; border-radius: 18px;
+      box-shadow: 0 10px 30px rgba(2,6,23,0.07); border: 1px solid #e5e9f2;
+    }
+
+    .cb-row { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; }
+    @media (min-width:1100px){ .cb-row { grid-template-columns: repeat(3, 1fr); } }
+
+    .cb-field { display: flex; flex-direction: column; gap: 6px; }
+    label { font-size: 14px; font-weight: 500; }
+
+    input[type="date"], input[type="number"] {
+      font-size: 18px; padding: 14px; border-radius: 14px;
+      border: 1px solid #e5e9f2; background: #fdfdfd;
+    }
+    input:focus {
+      border-color: #b8cdfd;
+      outline: none;
+      box-shadow: 0 0 0 4px rgba(0,82,255,0.12);
+    }
+
+    #runCalc {
+      background: #1a73e8; color: white; border: none;
+      font-size: 16px; padding: 14px 20px;
+      border-radius: 14px; font-weight: 600;
+      cursor: pointer; transition: 0.15s;
+    }
+    #runCalc:hover { background: #0f5ad2; }
+
+    /* Sticky Header */
+    .site-header {
+      position: fixed; top: 0; left: 0; right: 0; z-index: 1000;
+      background: rgba(255,255,255,0.85);
+      backdrop-filter: blur(8px);
+      border-bottom: 1px solid #e5e9f2;
+    }
+    .header-inner { display: flex; justify-content: space-between; align-items: center; min-height: 60px; }
+    .brand { font-weight: 700; font-size: 20px; text-decoration: none; color:#0a0f2c; }
+    .nav-links { display: flex; gap: 20px; }
+    .nav-links a { color:#1a1f33; font-weight: 500; text-decoration:none; }
+    .nav-links a:hover { text-decoration: underline; }
+    .nav-toggle { display:none; font-size:26px; background:none; border:0; cursor:pointer; }
+
+    @media (max-width:820px){
+      .nav-toggle { display:block; }
+      .nav-links {
+        display:none; position:absolute; right:28px; top:60px;
+        background:#fff; padding:12px;
+        border:1px solid #e5e9f2; border-radius:12px;
+        box-shadow:0 8px 24px rgba(2,6,23,0.15);
+      }
+      .nav-links.open { display:block; }
+      .nav-links a { display:block; padding:8px 10px; }
+    }
+
+    /* Tooltip */
+    .tooltip-click-container { position:relative; display:inline-flex; align-items:center; gap:8px; }
+    .click-icon {
+      width:18px; height:18px; border-radius:50%;
+      background:#1a73e8; color:white; font-size:12px;
+      display:flex; align-items:center; justify-content:center;
+      cursor:pointer;
+    }
+    .tooltip-click-box {
+      display:none; position:absolute; top:26px; left:0;
+      background:white; padding:14px 16px;
+      border-radius:12px; max-width:320px;
+      border:1px solid #e5e9f2;
+      box-shadow:0 8px 24px rgba(2,6,23,0.15);
+      font-size:13px; z-index:9999;
+      white-space: normal; overflow-wrap: anywhere;
+    }
+
+    /* Toggles (wrapper should expand properly; allow wrapping) */
+    #postCalcOptions {
+      display:none; background:#f1f4f9 !important;
+      border:1px solid #d7dce5 !important;
+      padding:16px !important; border-radius:12px !important;
+    }
+    .toggle-row {
+      display:flex; justify-content:space-between; gap:24px;
+      align-items:flex-start; flex-wrap:wrap; /* allow wrap so container grows */
+    }
+    .toggle-item {
+      display:flex; align-items:flex-start; gap:12px;
+      white-space: normal;               /* allow text to wrap in the item */
+      max-width: 100%;
+    }
+    .toggle-item .tooltip-click-container { align-items:flex-start; }
+
+    .switch { position:relative; width:46px; height:24px; flex:0 0 auto; }
+    .switch input { display:none; }
+    .slider {
+      position:absolute; top:0; left:0; right:0; bottom:0;
+      background:#cbd5e1; border-radius:24px; transition:0.2s; cursor:pointer;
+    }
+    .slider:before {
+      content:""; position:absolute;
+      width:18px; height:18px; left:3px; bottom:3px;
+      background:white; border-radius:50%; transition:0.2s;
+    }
+    input:checked + .slider { background:#1a73e8; }
+    input:checked + .slider:before { transform:translateX(22px); }
+
+    /* Chart title/subtitle center */
+    #chartTitle, #chartSubtitle { text-align: center; }
+  </style>
+
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="site-header">
+  <div class="cb-wrap header-inner">
+    <a class="brand" href="beta.html">FinTech Tools</a>
+    <button class="nav-toggle" aria-expanded="false">☰</button>
+    <nav id="primary-nav" class="nav-links">
+      <a href="#retirement">Retirement Planner</a>
+      <a href="budget.html">Budget Planner</a>
+    </nav>
+  </div>
+</header>
+
+<!-- MAIN -->
+<div class="cb-wrap">
+
+  <div class="cb-header" id="retirement">
+    <h1 class="cb-title">Retirement Calculator</h1>
+    <div class="cb-sub">Use the best retirement calculator on the web to understand your financial future.</div>
+  </div>
+
+  <div class="cb-stack">
+
+    <!-- Inputs -->
+    <div class="cb-card">
+      <div class="cb-row">
+        <div class="cb-field"><label>Date of Birth</label><input id="dob" type="date" /></div>
+        <div class="cb-field"><label>Retirement Date</label><input id="retireDate" type="date" /></div>
+        <div class="cb-field"><label>Current Savings ($)</label><input id="retiresavings" type="number" /></div>
+
+        <div class="cb-field"><label>Annual Contributions ($)</label><input id="futureretiresavings" type="number" /></div>
+        <div class="cb-field"><label>Social Security Start</label><input id="socsecAge" type="date" /></div>
+
+        <div class="cb-field">
+          <label class="tooltip-click-container">
+            Estimated Annual Social Security ($)
+            <span class="click-icon" id="ssInfoBtn">?</span>
+            <div class="tooltip-click-box" id="ssInfoBox">
+              Unsure how much you'll get? Use these official tools:<br><br>
+              • View your personalized estimate:<br>
+              <a href="https://www.ssa.gov/myaccount" target="_blank">SSA MyAccount</a><br><br>
+              • Quick benefit estimate calculator:<br>
+              <a href="https://www.ssa.gov/OACT/quickcalc/" target="_blank">SSA Quick Calculator</a>
+            </div>
+          </label>
+          <input id="socsecAmt" type="number" />
+        </div>
+
+        <div class="cb-field"><label>Pension Start</label><input id="pensiondate" type="date" /></div>
+        <div class="cb-field"><label>Pension Amount ($)</label><input id="pensions" type="number" /></div>
+      </div>
+
+      <div class="cb-actions"><button id="runCalc">Run Calculation</button></div>
+    </div>
+
+    <!-- Toggles -->
+    <div id="postCalcOptions" class="cb-card">
+      <div class="toggle-row">
+        <div class="toggle-item">
+          <label class="tooltip-click-container">
+            Account for inflation?
+            <span class="click-icon" id="inflationQM">?</span>
+            <div class="tooltip-click-box" id="inflationBox">
+              Adjusts all future dollars back into today’s dollars using 3% inflation.
+            </div>
+          </label>
+          <label class="switch">
+            <input type="checkbox" id="inflationToggle"><span class="slider"></span>
+          </label>
+        </div>
+
+        <div class="toggle-item">
+          <label class="tooltip-click-container">
+            Model withdrawals?
+            <span class="click-icon" id="withdrawQM">?</span>
+            <div class="tooltip-click-box" id="withdrawBox">
+              Standard 4% annual distribution starting at retirement.
+            </div>
+          </label>
+          <label class="switch">
+            <input type="checkbox" id="withdrawToggle"><span class="slider"></span>
+          </label>
+        </div>
+      </div>
+    </div>
+
+    <!-- Chart -->
+    <div class="cb-card">
+      <h2 id="chartTitle" style="margin:0; font-size:22px; font-weight:700;">
+        Projected Retirement Savings
+      </h2>
+      <div id="chartSubtitle" style="margin-bottom:14px; font-size:14px; color:#4a5568;"></div>
+      <div id="chart" style="height:360px;"></div>
+    </div>
+
+  </div>
+</div>
+
+<!-- Tooltips -->
+<script>
+function setupTooltip(btnId, boxId) {
+  const btn = document.getElementById(btnId);
+  const box = document.getElementById(boxId);
+  if (!btn || !box) return;
+
+  btn.addEventListener("click", e => {
+    e.stopPropagation();
+    box.style.display = (box.style.display === "block" ? "none" : "block");
+  });
+
+  document.addEventListener("click", () => { box.style.display = "none"; });
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+  setupTooltip("ssInfoBtn", "ssInfoBox");
+  setupTooltip("inflationQM", "inflationBox");
+  setupTooltip("withdrawQM", "withdrawBox");
+});
+</script>
+
+<!-- Mobile nav -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const btn = document.querySelector(".nav-toggle");
+  const nav = document.getElementById("primary-nav");
+  if (!btn || !nav) return;
+
+  btn.addEventListener("click", () => {
+    const opened = nav.classList.toggle("open");
+    btn.setAttribute("aria-expanded", opened ? "true" : "false");
+  });
+});
+</script>
+
+<!-- Calculator + Highcharts -->
+<script>
+let hcChart = null;
+
+document.getElementById("runCalc").addEventListener("click", function () {
+  document.getElementById("postCalcOptions").style.display = "block";
+
+  function updateChartSubtitle() {
+    const inf = document.getElementById('inflationToggle').checked;
+    const wd  = document.getElementById('withdrawToggle').checked;
+
+    const infText = inf
+      ? "Projections include inflation adjustment (3%)."
+      : "Projections do not account for inflation.";
+
+    const wdText = wd
+      ? "Projections include a 4% distribution."
+      : "Projections do not include distributions.";
+
+    document.getElementById("chartSubtitle").textContent = infText + " " + wdText;
+  }
+  updateChartSubtitle();
+
+  function parse(s) {
+    const [y,m,d] = s.split("-").map(Number);
+    return new Date(y, (m||1)-1, d||1);
+  }
+
+  const dobStr = document.getElementById("dob").value;
+  const retireStr = document.getElementById("retireDate").value;
+  if (!dobStr || !retireStr) return alert("Enter DOB and Retirement Date.");
+
+  const dob = parse(dobStr);
+  const retireDate = parse(retireStr);
+  const retireYear = retireDate.getFullYear();
+
+  const ssStr = document.getElementById("socsecAge").value;
+  const ssAmt = Number(document.getElementById("socsecAmt").value || 0);
+
+  const penStr = document.getElementById("pensiondate").value;
+  const penAmt = Number(document.getElementById("pensions").value || 0);
+
+  const ssStart = ssStr ? parse(ssStr) : null;
+  const penStart = penStr ? parse(penStr) : null;
+
+  const currentSavings = Number(document.getElementById("retiresavings").value || 0);
+  const annualContribution = Number(document.getElementById("futureretiresavings").value || 0);
+
+  const today = new Date();
+  const currentYear = today.getFullYear() + 1;  // avoid “free” growth this year
+  const endYear = dob.getFullYear() + 100;
+
+  const timeline = [];
+  for (let y = currentYear; y <= endYear; y++) timeline.push(y);
+
+  const flowContrib = timeline.map(y => (y < retireYear ? annualContribution : 0));
+  const flowSS = timeline.map(y => (ssStart && y >= ssStart.getFullYear() ? ssAmt : 0));
+  const flowPension = timeline.map(y =>
+    (penStart && y >= penStart.getFullYear() && y <= dob.getFullYear()+92) ? penAmt : 0
+  );
+
+  const inflow = timeline.map((_,i) => flowContrib[i] + flowSS[i] + flowPension[i]);
+
+  const inflationActive = document.getElementById('inflationToggle').checked;
+  const withdrawActive  = document.getElementById('withdrawToggle').checked;
+
+  const INFL = 0.03;
+  const WD   = 0.04;
+
+  function yearsFromToday(targetYear){
+    const now = new Date();
+    const then = new Date(targetYear, now.getMonth(), now.getDate());
+    return (then - now) / (365.25*86400000);
+  }
+
+  function deflate(path){
+    if (!inflationActive) return path;
+    return path.map((v,i) => v / Math.pow(1 + INFL, yearsFromToday(timeline[i])));
+  }
+
+  function simulate(rate){
+    let bal = currentSavings;
+    const out = [];
+    for (let i=0; i<timeline.length; i++){
+      bal = bal * (1 + rate) + inflow[i];
+      if (withdrawActive && timeline[i] >= retireYear) bal -= bal * WD;
+      out.push(bal);
+    }
+    return deflate(out);
+  }
+
+  const p3 = simulate(0.03);
+  const p5 = simulate(0.05);
+  const p7 = simulate(0.07);
+  const p9 = simulate(0.09);
+
+  function filter(path){
+    const startYear = retireYear - 10;
+    return timeline
+      .map((y,i) => y >= startYear ? [Date.UTC(y,0,1), path[i]] : null)
+      .filter(Boolean);
+  }
+
+  if (hcChart) hcChart.destroy();
+
+  hcChart = Highcharts.chart("chart", {
+    chart: { zooming:{type:"x"}, backgroundColor:"#fff", height:360 },
+    title: { text:null },
+    xAxis: { type:"datetime" },
+    yAxis: {
+      title:{ text:"Balance ($)" },
+      labels:{ formatter(){ return "$" + Highcharts.numberFormat(this.value,0) } }
+    },
+    legend:{ enabled:true, align:"center", verticalAlign:"top" },
+    tooltip:{
+      shared:true,
+      formatter: function () {
+        // Year header
+        const x = (this.points && this.points[0]) ? this.points[0].x : this.x;
+        const year = Highcharts.dateFormat('%Y', x);
+        // Lines with whole-dollar formatting
+        const lines = (this.points || [this.point]).map(p =>
+          `<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y, 0)}</b>`
+        ).join('<br/>');
+        return `<b>${year}</b><br/>${lines}`;
+      }
+    },
+    credits:{ enabled:false },
+    series:[
+      { name:"3%", data:filter(p3), type:"line", lineWidth:2 },
+      { name:"5%", data:filter(p5), type:"line", lineWidth:2 },
+      { name:"7%", data:filter(p7), type:"line", lineWidth:2 },
+      { name:"9%", data:filter(p9), type:"line", lineWidth:2 }
+    ]
+  });
+
+});
+</script>
+
+<!-- Auto-update when toggles change -->
+<script>
+(function(){
+  function rerun() {
+    const btn = document.getElementById("runCalc");
+    if (btn) btn.click();
+  }
+  document.addEventListener("change", e => {
+    if (["inflationToggle","withdrawToggle"].includes(e.target.id)) rerun();
+  });
+  document
+    .querySelectorAll("#postCalcOptions .switch, #postCalcOptions .slider")
+    .forEach(el => el.addEventListener("click", rerun));
+})();
+</script>
+
+</body>
+</html>
